--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.6.5",
+		"deepl": "^1.0.13",
 		"discord.js": "^14.12.1",
 		"dotenv": "^16.3.2",
 		"fs": "^0.0.1-security",
