--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
+		"@types/node-cron": "^3.0.11",
 		"@types/node-os-utils": "^1.3.4",
 		"@typescript-eslint/eslint-plugin": "^6.19.0",
 		"@typescript-eslint/parser": "^6.19.0",
@@ -28,6 +29,7 @@
 		"discord.js": "^14.12.1",
 		"dotenv": "^16.3.2",
 		"fs": "^0.0.1-security",
+		"node-cron": "^3.0.3",
 		"node-os-utils": "^1.3.7",
 		"os": "^0.1.2"
 	}
