--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 		"typescript": "^5.3.2"
 	},
 	"dependencies": {
+		"aurora-mongo": "^1.1.3",
 		"axios": "^1.6.5",
 		"deepl": "^1.0.13",
 		"discord.js": "^14.12.1",
 		"dotenv": "^16.3.2",
 		"fs": "^0.0.1-security",
+		"mongoose": "^8.1.1",
 		"node-cron": "^3.0.3",
 		"node-os-utils": "^1.3.7",
 		"os": "^0.1.2"
